still not working properly

--- a/distance_optimization.ipynb
+++ b/distance_optimization.ipynb
@@ -215,15 +215,16 @@
     "#sum enantiomer: -cos(theta) fliped axis=1 cos!, -cos(theta) photon coordinates\n",
     "for j in range(12):\n",
     "    for i in range(6):\n",
-    "        temp_totordered_phi_nocos[j,i]=np.add(temp_SCLCR_phi[j,i],temp_RCLCR_phi_flip[j,i])\n",
-    "        temp_totordered_phi[j,i]=np.add(temp_SCLCR_phi[j,i],temp_RCLCR_phi_flip[j,5-i])\n",
+    "        temp_totordered_phi[j,i]=np.add(temp_SCLCR_phi[j,i],gaussian_filter(temp_RCLCR_phi_flip, sigma=0.3)[j,i])\n",
+    "        # temp_totordered_phi[j,i]=np.add(temp_SCLCR_phi[j,i],gaussian_filter(temp_RCLCR_phi_flip, sigma=0.3)[j,5-i])\n",
     "\n",
     "MFPAD_totordered_phi=np.array(temp_totordered_phi).reshape(72,nphi,ncos)\n",
     "\n",
     "MFPAD_totordered_phi_norm=fugi.normalise_with_err(MFPAD_totordered_phi,normtype=2)\n",
     "\n",
-    "MFPAD_tot_phi_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered_phi, axis=0),normtype=3)\n",
-    "MFPAD_tot_phi_norm2=fugi.normalise_with_err(np.sum(MFPAD_totordered_phi, axis=0),normtype=2)\n",
+    "MFPAD_tot_phi_norm=fugi.normalise_with_err(np.sum(MFPAD_totordered_phi-MFPAD_totordered_phi.min(), axis=0),normtype=3)\n",
+    "\n",
+    "MFPAD_tot_phi_norm2=fugi.normalise_with_err(np.sum(MFPAD_totordered_phi-MFPAD_totordered_phi.min(), axis=0),normtype=2)\n",
     "\n",
     "#sorting\n",
     "# MFPAD_totordered_cos=fugi.sorting_array(MFPAD_totordered, theory=False, a=1)\n",
@@ -236,25 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(MFPAD_SCLCR_sum_phi.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(MFPAD_RCLCR_sum_phi.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(MFPAD_tot_phi_norm.T, cmap=\"viridis\")"
+    "plt.pcolormesh(MFPAD_tot_phi_norm.T)"
    ]
   },
   {
@@ -328,10 +311,11 @@
     "#NOTE these will be sorted according to cos(theta)_el [-1:1]\n",
     "phiM_th=np.unique(phi_full_sorted)\n",
     "cosM_th=np.unique(ctheta_full_sorted)\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=False, source=True)\n",
     "\n",
+    "cos_lin=True; limits=[-1+1/6, 1-1/6, -180+33/2, 180-33/2] #linear in ctheta [-1,1], default with Philipp\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, cos_lin=cos_lin, limits=limits, source=True)\n",
+    "xgo_cos_flip,ygo_cos_flip,cosphi_adj_cos_flip = fugi.create_gocoords(a=2, cos_lin=cos_lin, limits=limits, source=True)\n",
     "\n",
-    "xgo_cos_flip,ygo_cos_flip,cosphi_adj_cos_flip = fugi.create_gocoords(a=2, reduced=False, source=True)\n",
     "dfind=pd.DataFrame(cosphi_adj_cos_flip, columns=[\"ctheta\",\"phi\"])\n",
     "dfind[\"item\"]=allnames\n",
     "cosphi_th_std=(dfind.sort_values(by=[\"ctheta\", \"phi\"], ascending=[False,True]))[\"item\"].values\n",
@@ -343,6 +327,7 @@
     "# OUTPUT a=2 : 6_1', '5_1', '4_1', '3_1', '2_1', '1_1', '6_2', '5_2'\n",
     "MFPAD_Sth_phi=fugi.sorting_array(counts_temp_cosord, theory=True, items=allnames, a=2)\n",
     "MFPAD_Stot_phi=np.sum(MFPAD_Sth_phi, axis=0)\n",
+    "MFPAD_Rtot_phi=np.flip(MFPAD_Stot_phi, axis=1)\n",
     "\n",
     "print(\"MFPAD th shape \", MFPAD_Sth_phi.shape)\n",
     "print(\"phi_full_sorted shape \", phi_full_sorted.shape)\n"
@@ -483,16 +468,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(gaussian_filter(MFPAD_tot_phi_norm,sigma=0.4).T, cmap=\"viridis\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.pcolormesh(MFPAD_Stot_phi.T, cmap=\"viridis\")"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "# cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T,cmap=cmap_temp)\n",
+    "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
+    "limits=[0.,1.]\n",
+    "cs,ax=fugi.plot_interpolation(phiM,cosM,MFPAD_tot_phi_norm.T, ax=ax, limits=limits)\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "\n",
+    "ax.set_title(\"Total MFPAD R tot \"+en)\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "#cbar for contourf\n",
+    "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
+    "cbar.set_ticks([limits[0],limits[1]])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)"
    ]
   },
   {
@@ -507,14 +500,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "# cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T,cmap=cmap_temp)\n",
+    "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
+    "limits=[0.07,0.25]\n",
+    "cs,ax=fugi.plot_interpolation(phiM_th,cosM_th,MFPAD_Stot_phi.T, ax=ax, limits=limits)\n",
+    "\n",
+    "aspect=(phiM_th.max()/cosM_th.max())\n",
+    "\n",
+    "ax.set_title(\"Total MFPAD S opt \"+en)\n",
+    "ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "ax.set_ylabel('cos(\\u03D1) [adm]')\n",
+    "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
+    "#cbar for contourf\n",
+    "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
+    "cbar.set_ticks([limits[0],limits[1]])\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "#describe a set of alpha, beta, gamma angles to rotate the theoretical distribution (would be better to rotate before downsampling)\n",
-    "arr=np.arange(-15,15,1.)\n",
-    "arrc=np.arange(-15,15,1)\n",
+    "arr=np.arange(-100,100,5)\n",
+    "arrc=np.arange(-30,30,5)\n",
     "# arr=np.arange(-1,1,1)\n",
     "\n",
     "#alpha, beta, gamma for 3D rotation\n",
@@ -557,18 +576,22 @@
    "source": [
     "d_temp=[];\n",
     "\n",
-    "#upscale experiments \n",
+    "#upscale experiments and refit theory\n",
     "cos_newfull, phi_newfull = np.mgrid[-1:1:100j, -180:180:200j]\n",
     "f1 = interpolate.bisplrep(cos_full, phi_full, MFPAD_tot_phi_norm, s=1.)\n",
+    "fth = interpolate.bisplrep(ctheta_full_sorted, phi_full_sorted, MFPAD_Stot_phi.reshape(-1), s=0.001)\n",
+    "\n",
     "r1 = interpolate.bisplev(cos_newfull[:,0], phi_newfull[0,:],f1).T\n",
+    "r1_norm = fugi.normalise_with_err(r1-r1.min(),normtype=3)\n",
+    "rth = interpolate.bisplev(cos_newfull[:,0], phi_newfull[0,:],fth).T\n",
     "\n",
     "#theory full scale into cartesian\n",
     "phi_full_sorted_rad = phi_full_sorted/180.*np.pi\n",
     "theta_full_sorted_rad = np.arccos(ctheta_full_sorted)\n",
     "\n",
-    "x = np.flip(MFPAD_Stot_phi,axis=1).reshape(-1) * np.sin(theta_full_sorted_rad) * np.cos(phi_full_sorted_rad)\n",
-    "y = np.flip(MFPAD_Stot_phi,axis=1).reshape(-1) * np.sin(theta_full_sorted_rad) * np.sin(phi_full_sorted_rad)\n",
-    "z = np.flip(MFPAD_Stot_phi,axis=1).reshape(-1) * np.cos(theta_full_sorted_rad)\n",
+    "x = np.flip(rth,axis=1).reshape(-1) * np.sin(theta_full_sorted_rad) * np.cos(phi_full_sorted_rad)\n",
+    "y = np.flip(rth,axis=1).reshape(-1) * np.sin(theta_full_sorted_rad) * np.sin(phi_full_sorted_rad)\n",
+    "z = np.flip(rth,axis=1).reshape(-1) * np.cos(theta_full_sorted_rad)\n",
     "xyzm = np.stack((x, y, z))\n",
     "\n",
     "tic = time.perf_counter()\n",
@@ -580,8 +603,8 @@
     "    f = interpolate.bisplrep(ctheta_rot, phi_rot, mag_LF, s=2.)\n",
     "    # tic_1cycle = time.perf_counter()\n",
     "    r_rot=(interpolate.bisplev(cos_newfull[:,0], phi_newfull[0,:],f).T)\n",
-    "    r_tot_norm=fugi.normalise_with_err(np.array(r_rot),normtype=3)\n",
-    "    d_temp.append(np.sqrt(np.sum((r_tot_norm.reshape(-1)-r1.reshape(-1))**2)))\n",
+    "    r_tot_norm=fugi.normalise_with_err(np.array(r_rot-r_rot.min()),normtype=3)\n",
+    "    d_temp.append(np.sqrt(np.sum((r_tot_norm.reshape(-1)-r1_norm.reshape(-1))**2)))\n",
     "    # print(f\"{i:0d} cycle in {time.perf_counter() - tic:0.4f} seconds\")\n",
     "    if i == 0:\n",
     "        toc_1cycle = time.perf_counter()\n",
@@ -615,15 +638,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(r1.T, cmap=\"viridis\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.pcolormesh(r_tot_norm.T, cmap=\"viridis\")"
    ]
   },
@@ -633,17 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cos_newfull, phi_newfull = np.mgrid[-1:1:100j, -180:180:200j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fugi = reload(fugi)\n",
-    "\n",
     "plt.pcolormesh(fugi.rot3d_MFPAD_dist(MFPAD_Stot_phi,theta_full_sorted_rad,phi_full_sorted_rad,np.array([tuple(sort_out[0][0:3])]),phi_newfull[0,:],cos_newfull[:,0], convention=1).T,cmap=\"viridis\")"
    ]
   },
@@ -660,7 +664,7 @@
     "r_temp=[];n_temp=[]\n",
     "\n",
     "r_temp.append(fugi.rot3d_MFPAD_dist(MFPAD_Stot_phi_red,theta_rad,phi_rad,abg,phiM,cosM, convention=1, s=0.07))\n",
-    "MFPAD_Stot_phi_rotated=np.array(r_temp).reshape(1,len(abg),36,18)\n",
+    "MFPAD_Stot_phi_rotated=np.array(r_temp-np.array(r_temp).min()).reshape(1,len(abg),36,18)\n",
     "\n",
     "n_temp.append(fugi.normalise_with_err(MFPAD_Stot_phi_rotated[0],normtype=3))\n",
     "MFPAD_Stot_phi_rotated_norm=np.array(n_temp).reshape(1,len(abg),36,18)"
@@ -676,7 +680,7 @@
    "source": [
     "d_temp=[]\n",
     "for el in MFPAD_Stot_phi_rotated_norm[0]:\n",
-    "    d_temp.append(np.sqrt(np.sum((gaussian_filter(MFPAD_tot_phi_norm,sigma=0.4).reshape(-1)-el.reshape(-1))**2)))\n",
+    "    d_temp.append(np.sqrt(np.sum((gaussian_filter(MFPAD_tot_phi_norm,sigma=0.3).reshape(-1)-el.reshape(-1))**2)))\n",
     "\n",
     "d_single_norm=fugi.normalise_with_err(np.array(d_temp),normtype=2)\n",
     "\n",
@@ -872,7 +876,7 @@
     "# d_masked = np.ma.masked_array(d_norm, d_norm>=d_norm.min()+delta*0.5)\n",
     "# img = ax.scatter(a, b, g, c=d_masked, alpha=0.5, s=50, cmap=cmap_temp)\n",
     "\n",
-    "d_masked = np.ma.masked_array(d_single_norm, d_single_norm>=d_min_norm+delta*0.9)\n",
+    "d_masked = np.ma.masked_array(d_single_norm, d_single_norm>=d_min_norm+delta*0.7)\n",
     "img= ax.scatter(a, b, g, c=d_masked, alpha=0.8, s=60, cmap=cmap_temp)\n",
     "# ax.scatter(a, b, c=d_masked, zs=-90, zdir='z', s=60, cmap=plt.hot())\n",
     "# ax.scatter(a, g, c=d_masked, zs=-70, zdir='y', s=60, cmap=plt.hot())\n",
