new MF all energies

--- a/standard_graphs.ipynb
+++ b/standard_graphs.ipynb
@@ -97,45 +97,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\", \"ID4_mol_e0_valid/EN_gate/\"]\n",
+    "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\",\"ID4_mol_e0_valid/EN_gate/\"]\n",
     "ID=str(IDs[3]).split(\"_\")[0]\n",
     "\n",
     "# dirs = [\"MFPADs_multinew/\",\"MFPADs_multinew_phi/\"]\n",
     "\n",
     "fileSCR_12 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov_test.root\")\n",
     "path12 = \"angular_distr_el/CH12/\"\n",
-    "loc12=path12+IDs[1]\n",
+    "loc12=path12+IDs[1] #ID 1 is the only one possible\n",
     "\n",
-    "fileSCR_11 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov_test.root\")\n",
+    "fileSCR_11_11 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov_test.root\")\n",
+    "fileSCR_11_8 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_10800-2350ns_multiCH11.root\")\n",
+    "fileSCR_11_6 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH11.root\")\n",
+    "fileSCR_11_4 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_10800-2350ns_COMBI_multiCH11.root\")\n",
+    "fileSCR_11_3 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_10800-2350ns_multiCH11.root\")\n",
     "path11 = \"angular_distr_el/CH11/\"\n",
-    "loc11=path11+IDs[3]\n",
+    "loc11=path11+IDs[3] #ID 0 for all channels together\n",
     "\n",
     "fileSCR_9 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
     "path9 = \"angular_distr_el/CH9/\"\n",
-    "loc9=path9+IDs[3]\n",
+    "loc9=path9+IDs[3] #ID 0 for all channels together\n",
     "\n",
     "fileSCR_14 = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_550eV_CR_ALLCH_diatomic.root\")\n",
     "path14 = \"angular_distr_el/CH14/\"\n",
     "loc14=path14+IDs[0]\n",
     "\n",
-    "pz,px,counts_newton11=fugi.import_TH2Dgeneric(fileSCR_11,loc11+\"/Newton plot\")\n",
+    "pz,px,counts_newton11=fugi.import_TH2Dgeneric(fileSCR_11_11,loc11+\"/Newton plot\")\n",
     "\n",
     "en,KER=fugi.import_TH1Dgeneric(fileSCR_14,\"FMOx_m43-69/mol_ion/KER\")\n",
     "ctheta,cKER,counts_KER=fugi.import_TH2Dgeneric(fileSCR_14,\"FMOx_m43-69/mol_ion/ctheta vs KER\")\n",
     "\n",
-    "en11,KER11=fugi.import_TH1Dgeneric(fileSCR_11,\"FMOx_m30-69/mol_ion/KER\")\n",
-    "ctheta11,cKER11,counts_KER11=fugi.import_TH2Dgeneric(fileSCR_11,\"FMOx_m30-69/mol_ion/ctheta vs KER\")\n",
-    "px_MF,py_MF,pz_MF,counts=fugi.import_TH3Dgeneric(fileSCR_11,\"angular_distr_el/CH11/ID_ALL_mol_e0_valid/EN_gate/mol_orient_GATED/Ion Molframe cnorm\")\n",
-    "px_MF_l,py_MF_l,pz_MF_l,counts_l=fugi.import_TH3Dgeneric(fileSCR_11,\"angular_distr_el/CH11/ID_ALL_mol_e0_valid/EN_gate/mol_orient_GATED/Ion Molframe coord\")\n",
+    "en11,KER11=fugi.import_TH1Dgeneric(fileSCR_11_11,\"FMOx_m30-69/mol_ion/KER\")\n",
+    "ctheta11,cKER11,counts_KER11=fugi.import_TH2Dgeneric(fileSCR_11_11,\"FMOx_m30-69/mol_ion/ctheta vs KER\")\n",
+    "px_MF,py_MF,pz_MF,counts=fugi.import_TH3Dgeneric(fileSCR_11_11,\"angular_distr_el/CH11/ID_ALL_mol_e0_valid/EN_gate/mol_orient_GATED/Ion Molframe cnorm\")\n",
+    "px_MF_l,py_MF_l,pz_MF_l,counts_l=fugi.import_TH3Dgeneric(fileSCR_11_11,\"angular_distr_el/CH11/ID_ALL_mol_e0_valid/EN_gate/mol_orient_GATED/Ion Molframe coord\")\n",
     "\n",
-    "prelx,prelz,counts_prel=fugi.import_TH2Dgeneric(fileSCR_11,\"test/p_relx vs p_relz\")\n",
+    "prelx,prelz,counts_prel=fugi.import_TH2Dgeneric(fileSCR_11_11,\"test/p_relx vs p_relz\")\n",
     "\n",
     "pz,px,counts_newton9=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/Newton plot\")\n",
     "# check_ion[2]_neutral_xy\n",
     "# KER, p_sumx vs p_sumz, p_relx vs p_relz\n",
     "\n",
     "tof14_1,tof14_2,couts_pipico_14=fugi.import_TH2Dgeneric(fileSCR_14,loc14+\"/PIPICO\")\n",
-    "tof11_1,tof11_2,couts_pipico_11=fugi.import_TH2Dgeneric(fileSCR_11,\"test/PIPICO\")"
+    "tof11_1,tof11_2,couts_pipico_11=fugi.import_TH2Dgeneric(fileSCR_11_11,\"test/PIPICO\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newton12_all=[]; newton11_11_all=[]; newton11_8_all=[]; newton11_6_all=[]; newton11_6_all=[]; newton11_4_all=[]; newton11_3_all=[]; newton9_all=[]\n",
+    "for i,el in enumerate(IDs):\n",
+    "    if i == 1:\n",
+    "        loc12=path12+el\n",
+    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_12,loc12+\"/Newton plot\")\n",
+    "        newton12_all.append(plot)\n",
+    "    else:\n",
+    "        loc11=path11+el        \n",
+    "        dummy1,dummy2,plot11=fugi.import_TH2Dgeneric(fileSCR_11_11,loc11+\"/Newton plot\")\n",
+    "        dummy1,dummy2,plot8=fugi.import_TH2Dgeneric(fileSCR_11_8,loc11+\"/Newton plot\")\n",
+    "        dummy1,dummy2,plot6=fugi.import_TH2Dgeneric(fileSCR_11_6,loc11+\"/Newton plot\")\n",
+    "        dummy1,dummy2,plot4=fugi.import_TH2Dgeneric(fileSCR_11_4,loc11+\"/Newton plot\")\n",
+    "        dummy1,dummy2,plot3=fugi.import_TH2Dgeneric(fileSCR_11_3,loc11+\"/Newton plot\")\n",
+    "        newton11_11_all.append(plot11)\n",
+    "        newton11_8_all.append(plot8)\n",
+    "        newton11_6_all.append(plot6)\n",
+    "        newton11_4_all.append(plot4)\n",
+    "        newton11_3_all.append(plot3)\n",
+    "    if i <=3:\n",
+    "        loc9=path9+el\n",
+    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/Newton plot\")\n",
+    "        newton9_all.append(plot)"
    ]
   },
   {
@@ -333,28 +367,6 @@
     "ax.set_aspect(aspect)\n",
     "\n",
     "fig.savefig(dir+\"R-MOx_MFPAD.png\", dpi=300, transparent=False, bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newton12_all=[]; newton11_all=[]; newton9_all=[]\n",
-    "for i,el in enumerate(IDs):\n",
-    "    if i == 1:\n",
-    "        loc12=path12+el\n",
-    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_12,loc12+\"/Newton plot\")\n",
-    "        newton12_all.append(plot)\n",
-    "    else:\n",
-    "        loc11=path11+el\n",
-    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_11,loc11+\"/Newton plot\")\n",
-    "        newton11_all.append(plot)\n",
-    "    if i <=3:\n",
-    "        loc9=path9+el\n",
-    "        dummy1,dummy2,plot=fugi.import_TH2Dgeneric(fileSCR_9,loc9+\"/Newton plot\")\n",
-    "        newton9_all.append(plot)"
    ]
   },
   {
@@ -855,7 +867,7 @@
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
     "ax.set_xlim([-1, 1])\n",
-    "ax.set_xlabel('cos(\\u03D1) [adm]')\n",
+    "ax.set_xlabel('cos\\u03D1 [adm]')\n",
     "ax_histy.set_ylim([1, 9])\n",
     "ax_histy.set_ylabel('KER [eV]')\n",
     "ax_histy.xaxis.set_tick_params(labelbottom=False)\n",
@@ -888,8 +900,8 @@
     "circle1 = patches.Circle((0, 0), radius=110., fill=False, color=\"r\", alpha=0.3)\n",
     "ax.add_patch(circle1)\n",
     "\n",
-    "ax.set_xlabel('$p_{relx}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{relz}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{relx}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{relz}$ [a.u.]')\n",
     "ax.set_ylim([None, 200])\n",
     "\n",
     "cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
@@ -919,8 +931,8 @@
     "my_cmap = mpl.cm.get_cmap('viridis').copy(); my_cmap.set_under('w')\n",
     "cs,ax=fugi.plot_interpolation(pz_MF,px_MF,counts_ion_red.T, cmap=my_cmap, xstep=.01, ystep=.01, ax=ax, s_test=5, cont=False)\n",
     "\n",
-    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "ax.set_xlim(-0.75,0.75)\n",
     "ax.set_ylim(-1.8,1.5)\n",
     "\n",
@@ -960,8 +972,8 @@
     "my_cmap = mpl.cm.get_cmap('viridis').copy(); my_cmap.set_under('w')\n",
     "cs,ax=fugi.plot_interpolation(pz_MF,px_MF,counts_ion_red.T, cmap=my_cmap, xstep=.01, ystep=.01, ax=ax, s_test=5, cont=False)\n",
     "\n",
-    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "ax.set_xlim(-0.75,0.75)\n",
     "ax.set_ylim(-1.8,1.5)\n",
     "\n",
@@ -1002,8 +1014,8 @@
     "cs=ax.pcolormesh(pz,px,counts_newton12_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "ax.set_xlim(-2,1.5)\n",
     "ax.set_ylim(-1.5,1.5)\n",
     "\n",
@@ -1029,17 +1041,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "newton=[newton11_11_all[0],newton11_8_all[0],newton11_6_all[0],newton11_4_all[0],newton11_3_all[0]]\n",
+    "ID_local=str(IDs[0]).split(\"_\")[0]\n",
+    "en=[\"11eV\",\"8eV\",\"6eV\",\"4eV\",\"3eV\"]\n",
+    "text_en=[\"11,7 eV\",\"8,1 eV\",\"6,1 eV\",\"4,1 eV\",\"3,1 eV\"]\n",
+    "\n",
+    "for i,el in enumerate(newton):\n",
+    "        fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "        counts_newton_red=np.ma.masked_array(el,el<2)\n",
+    "        cs=ax.pcolormesh(pz,px,counts_newton_red.T, shading='gouraud')\n",
+    "        # ax.set_title(\"fish fillet y-axis\")\n",
+    "\n",
+    "        ax.yaxis.set_tick_params(labelbottom=False)\n",
+    "        ax.xaxis.set_tick_params(labelbottom=False)\n",
+    "\n",
+    "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax, format='%.1e')\n",
+    "        cbar.set_ticks([cs.get_array().min(),cs.get_array().max()])\n",
+    "        # cbar.set_ticks(np.linspace(cs.get_array().min(),cs.get_array().max(),5))\n",
+    "        # cbar.set_ticks([counts_newton11_red.min(),counts_newton11_red.max()])\n",
+    "        cbar.ax.set_ylabel('absolute counts')\n",
+    "        \n",
+    "        divider = make_axes_locatable(ax)\n",
+    "        ax_histy = divider.append_axes(\"left\", 1.2, pad=0.15, sharey=ax)\n",
+    "        ax_histy.plot(np.sum(counts_newton_red,axis=0),pz, color=cmap_viridis(0), linewidth=3, alpha = 0.6)\n",
+    "        ax_histy.invert_xaxis()\n",
+    "        ax_histy.set_ylabel('p$_{y}$ [a.u.]')\n",
+    "        ax_histy.set_ylim(-1.5,1.5)\n",
+    "        ax_histy.xaxis.set_tick_params(labelbottom=False)\n",
+    "        ax_histy.grid(which=\"minor\")\n",
+    "\n",
+    "        ax_histx = divider.append_axes(\"bottom\", 1.2, pad=0.15, sharex=ax)\n",
+    "        ax_histx.plot(px,np.sum(counts_newton_red,axis=1), color=cmap_viridis(0), linewidth=3, alpha = 0.6)\n",
+    "        ax_histx.invert_yaxis()\n",
+    "        ax_histx.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "        ax_histx.set_xlim(-2,1.5)\n",
+    "        ax_histx.yaxis.set_tick_params(labelbottom=False)\n",
+    "        ax_histx.grid()\n",
+    "\n",
+    "        arrow1 = patches.Arrow(0, 0, 1, 0, width=0.1, color=\"r\", alpha=0.6)\n",
+    "        ax.add_patch(arrow1)\n",
+    "        if ID_local == \"ID\":\n",
+    "                text=ax.text(0.55,0.15, \"$C_{2}H_{i=1,2,3}^{+}$\") #,fontweight=\"bold\")\n",
+    "        if ID_local == \"ID2\":\n",
+    "                text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
+    "        if ID_local == \"ID3\":\n",
+    "                text=ax.text(0.85,0.15, \"$C_{2}H_{2}^{+}$\") #,fontweight=\"bold\")\n",
+    "        if ID_local == \"ID4\":\n",
+    "                text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
+    "        ax.text(-1.,1., \"E$_{ph}$ = \"+text_en[i])\n",
+    "                                 \n",
+    "        text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
+    "\n",
+    "\n",
+    "        fig.savefig(dir+\"Netwon_\"+ID_local+\"_CH11_\"+en[i]+\".png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "        # fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#sum el w-layer\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "\n",
     "ID_local=str(IDs[0]).split(\"_\")[0]\n",
-    "counts_newton11_red=np.ma.masked_array(newton11_all[0],newton11_all[0]<2)\n",
+    "counts_newton11_red=np.ma.masked_array(newton11_8_all[0],newton11_8_all[0]<2)\n",
     "\n",
     "cs=ax.pcolormesh(pz,px,counts_newton11_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "ax.set_xlim(-2,1.5)\n",
     "ax.set_ylim(-1.5,1.5)\n",
     "\n",
@@ -1053,7 +1127,7 @@
     "        text=ax.text(0.85,0.15, \"$C_{2}H_{2}^{+}$\") #,fontweight=\"bold\")\n",
     "if ID_local == \"ID4\":\n",
     "        text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
-    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "        ax.set_xlabel('p$_{x}$ [a.u.]')\n",
     "\n",
     "text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
     "\n",
@@ -1063,7 +1137,7 @@
     "# cbar.set_ticks([counts_newton11_red.min(),counts_newton11_red.max()])\n",
     "cbar.ax.set_ylabel('absolute counts')\n",
     "\n",
-    "fig.savefig(dir+\"Netwon_\"+ID_local+\"_ch11.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(dir+\"Netwon_\"+ID_local+\"_ch11_8ev.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "# fig.savefig(dir+\"el_sum_wlayer.svg\", dpi=300, transparent=False)"
    ]
   },
@@ -1084,8 +1158,8 @@
     "cs=ax.pcolormesh(pz,px,counts_newton9_red.T, shading='gouraud')\n",
     "# ax.set_title(\"fish fillet y-axis\")\n",
     "\n",
-    "ax.set_xlabel('$p_{x}$ [a.u.]')\n",
-    "ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "ax.set_xlabel('p$_{x}$ [a.u.]')\n",
+    "ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "ax.set_xlim(-2,1.5)\n",
     "ax.set_ylim(-1.5,1.5)\n",
     "\n",
@@ -1122,13 +1196,13 @@
     "fig,axes= plt.subplots(4,1, figsize=(7, 25), sharex=True, constrained_layout=True)\n",
     "\n",
     "for i,ax in enumerate(axes.ravel()):\n",
-    "    # el=np.ma.masked_array(newton11_all[i+1],newton11_all[i+1]<5)\n",
-    "    el=np.ma.masked_array(newton11_all[i],newton11_all[i]<1)\n",
+    "    # el=np.ma.masked_array(newton11_11_all[i+1],newton11_11_all[i+1]<5)\n",
+    "    el=np.ma.masked_array(newton11_11_all[i],newton11_11_all[i]<1)\n",
     "    cs=ax.pcolormesh(pz,px,el.T, shading='gouraud')\n",
     "\n",
     "    ax.yaxis.set_label_position(\"right\")\n",
     "    ax.yaxis.tick_right()\n",
-    "    ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "    ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "    ax.set_xlim(-2,1.5)\n",
     "    ax.set_ylim(-1.5,1.5)\n",
     "\n",
@@ -1143,7 +1217,7 @@
     "        text=ax.text(0.85,0.15, \"$C_{2}H^{+}$\") #,fontweight=\"bold\")\n",
     "    if i == 3:\n",
     "        text=ax.text(0.85,0.15, \"$C_{2}H_{3}^{+}$\") #,fontweight=\"bold\")\n",
-    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "        ax.set_xlabel('p$_{x}$ [a.u.]')\n",
     "    \n",
     "    text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
     "\n",
@@ -1170,7 +1244,7 @@
     "    el=np.ma.masked_array(newton9_all[i],newton9_all[i]<1)\n",
     "    cs=ax.pcolormesh(pz,px,el.T, shading='gouraud')\n",
     "\n",
-    "    ax.set_ylabel('$p_{y}$ [a.u.]')\n",
+    "    ax.set_ylabel('p$_{y}$ [a.u.]')\n",
     "    ax.set_xlim(-2,1.5)\n",
     "    ax.set_ylim(-1.5,1.5)\n",
     "\n",
@@ -1185,7 +1259,7 @@
     "        text=ax.text(0.85,0.15, \"$CH_{2}^{+}$\") #,fontweight=\"bold\")\n",
     "    if i == 3:\n",
     "        text=ax.text(0.85,0.15, \"$CH_{3}^{+}$\") #,fontweight=\"bold\")\n",
-    "        ax.set_xlabel('$p_{x}$ [a.u.]')\n",
+    "        ax.set_xlabel('p$_{x}$ [a.u.]')\n",
     "    \n",
     "    text.set_path_effects([PathEffects.withStroke(linewidth=4, foreground='w', alpha=0.5)])\n",
     "\n",
